# vectrix

./: .gitignore  API_SPEC.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_KR.md  constants.json  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/skills/vectrix-analyze/: SKILL.md
.claude/skills/vectrix-forecast/: SKILL.md
.claude/skills/vectrix-regress/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: docs.yml  publish-core.yml  publish.yml  test.yml
_app/: version.json
_app/immutable/assets/: 0.D1gYPfW-.css  2.D95rD-3h.css  4.Bc7fVfq1.css  5.B6tZh5Oy.css  5.D5epyVp5.css
_app/immutable/chunks/: 2MYg42Xl.js  9GgGYBwR.js  B1XhCCJ_.js  BL85AqDk.js  BNkma5qS.js  BSs58a_k.js  BZFYDQ9R.js  BZuktXa0.js  B_R98AYF.js  BazPMaIf.js  BbM_yDuO.js  BeO5bimI.js  BeWngDXb.js  BfeGKEKO.js  Bl-8_yJP.js  Bum-ybSf.js  Byayat8k.js  C4bPgMfS.js  C6xMsP9U.js  CAnADH5G.js  CBlwjQhh.js  CD5Rgh-7.js  CF0033i_.js  CMH6B8_5.js  CRYQhGOF.js  CfvyWmO9.js  CzQ3g-qX.js  CzfeoDaJ.js  D1vCDmlc.js  D5O1Zk6t.js  DAF1xPqN.js  DBtgn2EA.js  DKsrREJ2.js  DXVa1f3M.js  DklDecW2.js  DoCexjAu.js  DqtyGA_h.js  DrXHWcgm.js  Ds0PP__A.js  ErPjqtKV.js  (+7 more)
_app/immutable/entry/: app.AxqqnA8V.js  app.BSJUgm6W.js  app.B_qo8ePO.js  app.BkQW1epk.js  app.D8r0ofsA.js  app.DimLyr8e.js  app.UJOr8IYb.js  app.Z6hRzUWq.js  start.7BM4QYNr.js  start.BSuTWusX.js  start.C6mSazlw.js  start.CEINwgKj.js  start.CYj4BNO7.js  start.CjmgzE89.js  start.DbCgN-t3.js  start.DtzGhSv_.js
_app/immutable/nodes/: 0.DTw2Jn4d.js  1.06Km0AtQ.js  1.B6J2KOnb.js  1.Bt1lhH77.js  1.Bv0aa1K-.js  1.CVklB70u.js  1.DIIX2alb.js  1.DelSDqBE.js  1.DgrHCGuJ.js  2.5_lzkxI0.js  2.B7vZCKjh.js  2.BqXyV92q.js  2.BuPnvTJc.js  2.C-5TZ4uT.js  2.CiApmhfj.js  2.CnfI-ErQ.js  2.D7IJjWsX.js  3.B7EJ1Ppc.js  3.BJx_1l_e.js  3.BXW1gpEP.js  3.CkoNz8yM.js  3.Cn7IFId3.js  3.Dr-Gh9Yf.js  3.DtvY_0ES.js  3.vSXA4JiQ.js  4.3jFflSg0.js  4.BIQUz5le.js  4.BWoW86xD.js  4.CFJHyPdi.js  4.CcMxhGCn.js  4.CzoiKPsy.js  4.NrBzg-6F.js  4.kEjZAKRE.js  5.6ini5w6l.js  5.BPYR-wSn.js  5.CPhnOA1s.js  5.D2fHX5-m.js  5.DGojem1d.js  5.DOsi5FZB.js  5.DWLU7P8_.js  (+1 more)
_backup/: README_KR.md
_backup/deprecated_blog/: index.ko.md  index.md
_backup/deprecated_ko/: index.ko.md
_backup/deprecated_ko/api/: business.ko.md  multivariate.ko.md  types.ko.md
_backup/deprecated_ko/getting-started/: installation.ko.md
_backup/deprecated_ko/guide/: business.ko.md  regression.ko.md
_backup/ko_showcase/: 02_koreanRegression.ko.md  04_businessIntelligence.ko.md
_backup/ko_tutorials/: 02_analyze.ko.md  05_adaptive.ko.md  06_business.ko.md  index.ko.md
_backup/old_notebooks/: 01_quickstart.ipynb  02_models_and_dna.ipynb
_deprecated_docs/: analysis.ko.md  forecasting.ko.md  index.ko.md  installation.ko.md  regression.ko.md
benchmarks/: README.md  m3Loader.py  m3Results.csv  m4Loader.py  m4Results.csv  runM3.py  runM4.py
docs/: benchmarks.ko.md  benchmarks.md  index.ko.md  index.md
docs/_deprecated_ko/: benchmarks.ko.md
docs/_deprecated_ko/guide/: adaptive.ko.md  analysis.ko.md  forecasting.ko.md  foundation.ko.md
docs/_deprecated_showcase/: 01_koreanEconomy.ko.md  03_modelComparison.ko.md  index.md
docs/_deprecated_showcase/en/: 02_koreanRegression.py  04_businessIntelligence.py
docs/_deprecated_showcase/ko/: 03_modelComparison.py  04_businessIntelligence.py
docs/_deprecated_tutorials/: 01_quickstart.md  03_regression.ko.md  03_regression.md  04_models.ko.md  04_models.md  06_business.md  index.md
docs/api/: adaptive.ko.md  adaptive.md  business.md  easy.ko.md  easy.md  foundation.ko.md  foundation.md  multivariate.md  pipeline.ko.md  pipeline.md  regression.ko.md  regression.md  types.md  vectrix.ko.md  vectrix.md
docs/blog/: 001_whatIsForecasting.md  002_howWeKnowForecastsWork.md  003_pythonForecastingLibraries.md  004_yourFirstForecastInPython.md  005_forecastingModelsExplained.md  006_statisticalVsFoundation.md  INDEX.md
docs/blog/assets/: README.md
docs/getting-started/: installation.ko.md  installation.md  quickstart.ko.md  quickstart.md
docs/guide/: adaptive.ko.md  adaptive.md  analysis.md  business.ko.md  business.md  forecasting.md  foundation.ko.md  foundation.md  multivariate.ko.md  multivariate.md  pipeline.ko.md  pipeline.md  regression.md
docs/overrides/: home.html  home.ko.html  main.html
docs/showcase/: 01_koreanEconomy.md  02_koreanRegression.md  03_modelComparison.md  04_businessIntelligence.ko.md  04_businessIntelligence.md  index.ko.md  index.md
docs/stylesheets/: theme.css
docs/tutorials/: 01_quickstart.ko.md  01_quickstart.md  02_analyze.ko.md  02_analyze.md  03_regression.ko.md  03_regression.md  04_models.ko.md  04_models.md  05_adaptive.ko.md  05_adaptive.md  06_business.ko.md  06_business.md  07_visualization.md  index.ko.md  index.md
landing/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
landing/src/: app.css  app.html
landing/static/: llms-full.txt  llms.txt  robots.txt  sitemap.xml
mcp/: README.md  server.py
notebooks/: 01_quickstart.ipynb  02_models_and_dna.ipynb  03_try_your_data.ipynb
notebooks/showcase/: 01_sales_forecasting_dashboard.ipynb  02_demand_planning_workflow.ipynb  GUIDE.md
notebooks/tutorials/: 01_quickstart.ipynb  02_analyze.ipynb  03_regression.ipynb  04_models.ipynb  05_adaptive.ipynb  06_business.ipynb  07_visualization.ipynb
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scripts/: generatePlaygroundData.py  syncConstants.py
src/forecastx/: __init__.py  batch.py  easy.py  forecastx.py  persistence.py
src/vectrix/: __init__.py  batch.py  datasets.py  easy.py  persistence.py  pipeline.py  types.py  vectrix.py
tests/: conftest.py  test_adaptive.py  test_all_models.py  test_business.py  test_core_fixes.py  test_datasets.py  test_distributions.py  test_easy.py  test_engine_extras.py  test_engine_utils.py  test_forecastx.py  test_foundation.py  test_infrastructure.py  test_new_models.py  test_novel.py  test_pipeline.py  test_refit_contract.py  test_regression.py  test_var.py  test_worldclass.py
(+420 files in other folders)
