[project]
name = "forecastx"
version = "3.0.0"
description = "Zero-config time series forecasting library. Pure numpy + scipy implementation with no external forecasting library dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "forecasting",
    "time-series",
    "prediction",
    "ets",
    "arima",
    "theta",
    "mstl",
    "exponential-smoothing",
    "auto-forecast",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
numba = ["numba>=0.58.0"]
ml = [
    "lightgbm>=3.0",
    "xgboost>=1.7",
    "scikit-learn>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
all = ["forecastx[numba,ml,dev]"]

[project.urls]
Homepage = "https://github.com/eddmpython/forecastx"
Repository = "https://github.com/eddmpython/forecastx"
Issues = "https://github.com/eddmpython/forecastx/issues"
"Buy Me a Coffee" = "https://buymeacoffee.com/eddmpython"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forecastx"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
