[project]
name = "vectrix"
version = "0.0.3"
description = "Zero-config time series forecasting & analysis library. Pure numpy + scipy implementation with 30+ models, regression, and adaptive intelligence."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "forecasting",
    "time-series",
    "prediction",
    "regression",
    "ets",
    "arima",
    "theta",
    "mstl",
    "exponential-smoothing",
    "auto-forecast",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
    "Programming Language :: Rust",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
numba = ["numba>=0.58.0"]
ml = [
    "lightgbm>=3.0",
    "xgboost>=1.7",
    "scikit-learn>=1.0",
]
foundation = [
    "torch>=2.0",
    "chronos-forecasting>=2.0",
]
neural = [
    "neuralforecast>=1.7",
]
turbo = ["vectrix-core>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
tutorials = ["marimo>=0.1.0", "matplotlib>=3.5.0"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-static-i18n>=1.2",
]
all = ["vectrix[turbo,numba,ml,foundation,neural,dev,tutorials,docs]"]

[project.urls]
Homepage = "https://github.com/eddmpython/vectrix"
Repository = "https://github.com/eddmpython/vectrix"
Issues = "https://github.com/eddmpython/vectrix/issues"
Documentation = "https://eddmpython.github.io/vectrix/"
"Buy Me a Coffee" = "https://buymeacoffee.com/eddmpython"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vectrix"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E741", "F841", "F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
