[project]
name = "vectrix"
version = "0.0.10"
description = "Zero-config time series forecasting & analysis library. 30+ models with built-in Rust engine for blazing-fast performance."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "forecasting",
    "time-series",
    "prediction",
    "regression",
    "ets",
    "arima",
    "theta",
    "mstl",
    "exponential-smoothing",
    "auto-forecast",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
    "Programming Language :: Rust",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
numba = ["numba>=0.58.0"]
ml = [
    "lightgbm>=3.0",
    "xgboost>=1.7",
    "scikit-learn>=1.0",
]
foundation = [
    "torch>=2.0",
    "chronos-forecasting>=2.0",
]
neural = [
    "neuralforecast>=1.7",
]
mcp = ["mcp[cli]>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-static-i18n>=1.2",
]
all = ["vectrix[numba,ml,foundation,neural]"]

[project.urls]
Homepage = "https://github.com/eddmpython/vectrix"
Repository = "https://github.com/eddmpython/vectrix"
Issues = "https://github.com/eddmpython/vectrix/issues"
Documentation = "https://eddmpython.github.io/vectrix/"
"Buy Me a Coffee" = "https://buymeacoffee.com/eddmpython"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "vectrix._core"
include = ["llms.txt", "llms-full.txt", "mcp/server.py", "mcp/README.md"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "marimo>=0.1.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.7.2",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["src/vectrix/experiments"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E741", "F841", "F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
