[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vectrix-core"
version = "0.1.0"
requires-python = ">=3.10"
description = "Rust-accelerated core for Vectrix time series forecasting"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
