[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vectrix-core"
version = "0.2.0"
requires-python = ">=3.10"
description = "Rust-accelerated core for Vectrix time series forecasting"
license = { text = "MIT" }
authors = [
    { name = "eddmpython" }
]
keywords = ["forecasting", "time-series", "rust", "acceleration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.24.0"]

[project.urls]
Homepage = "https://github.com/eddmpython/vectrix"
Repository = "https://github.com/eddmpython/vectrix"

[tool.maturin]
features = ["pyo3/extension-module"]
